<?xml version="1.0"?>
<package format="2">
  <name>laser_line_extraction</name>
  <version>0.1.0</version>
  <description>
      A ROS package to extract line segments from LaserScan messages.
  </description>
  <maintainer email="m.gallant@queensu.ca">Marc Gallant</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cmake_modules</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
